removed 'download_url' from pyproject.toml dynamic list.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,4 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "PythonDocxAJM"
-dynamic = ['version', 'download_url']
+dynamic = ['version']#, 'download_url']
